Minor cleaning and refactoring for plotting

--- a/src/test/devTesting.ipynb
+++ b/src/test/devTesting.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "import logging\n",
-    "import time\n",
     "import os\n",
     "import sys\n",
     "sys.path.append(os.path.join(os.getcwd(), \"..\"))\n",
@@ -19,100 +19,45 @@
     "from resources import RESOURCE_PATH\n",
     "from stats import sleepStats\n",
     "from util import utils\n",
+    "from util import plotting as mplot\n",
     "import importlib\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "dataFolder = \"\"\n",
+    "dataFolder = \"\\\\scripts_data\\\\fitbit_analyzer\\\\2016\"\n",
     "filepath =  RESOURCE_PATH + \"\\\\unittest\\\\test_sleepStats.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'stats.sleepStats' from 'C:\\\\Users\\\\Alex\\\\Documents\\\\python_workspace\\\\fitbit-analyzer\\\\src\\\\test\\\\..\\\\stats\\\\sleepStats.py'>"
-      ]
-     },
-     "execution_count": 4,
-     "output_type": "execute_result",
-     "metadata": {}
-    }
-   ],
-   "source": [
-    "importlib.reload(sleepStats)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['00:00:00' '00:01:00' '00:02:00' ..., '23:57:00' '23:58:00' '23:59:00']\n"
-     ]
-    }
-   ],
-   "source": [
-    "stats = pd.read_csv(dataFolder + \"//intradayStats.csv\")\n",
-    "print(stats.columns.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "from util import plotting as mplot\n",
+    "importlib.reload(mplot)\n",
+    "stats = pd.read_csv(dataFolder + \"//intradayStats.csv\")\n",
     "mplot.plotSleepValueHeatmap(stats)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "stats = pd.read_csv(dataFolder + \"//stats.csv\")\n",
-    "stats = stats[['sleep_inefficiency', 'restless', 'sleep_interval_avg_len', 'total_hours']]\n",
-    "#pd.scatter_matrix(stats, alpha=0.5, diagonal='kde')\n",
-    "#sns.plt.show()\n",
-    "g = sns.PairGrid(stats)\n",
-    "\n",
-    "from scipy import stats\n",
-    "def corrfunc(x, y, **kws):\n",
-    "    r, _ = stats.pearsonr(x, y)\n",
-    "    ax = plt.gca()\n",
-    "    ax.annotate(\"r = {:.2f}\".format(r),xy=(.1, .9), xycoords=ax.transAxes)\n",
-    "    \n",
-    "g.map_upper(plt.scatter)\n",
-    "g.map_diag(plt.hist)\n",
-    "g.map_lower(sns.kdeplot, cmap=\"Blues_d\")\n",
-    "g.map_upper(corrfunc)\n",
-    "sns.plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ""
+    "stats = pd.read_csv(dataFolder + \"//stats.csv\", parse_dates=['date'])"
    ]
   }
  ],
@@ -125,7 +70,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
