More stats for sleep. Basic addition for steps and combined. Better commenting and code for load utils. Messed up a bit notebooks

--- a/heartBeatTesting.ipynb
+++ b/heartBeatTesting.ipynb
@@ -8,9 +8,12 @@
    },
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import os\n",
     "import sys\n",
-    "sys.path.append(os.path.join(os.getcwd(), \"..\"))\n",
+    "sys.path.append(os.path.join(os.getcwd(), \"src\"))\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -22,18 +25,6 @@
     "from util import utils\n",
     "from util import plotting\n",
     "from stats import hbStats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "importlib.reload(plotting)\n",
-    "importlib.reload(hbStats)"
    ]
   },
   {
@@ -51,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "dataFolder = \"fitbit_analyzer\\\\dataDumpSubset\""
+    "dataFolder = \"../../scripts_data/fitbit_analyzer/dataDumpSubset\""
    ]
   },
   {
@@ -130,9 +121,35 @@
    "outputs": [],
    "source": [
     "nData = data.set_index([\"datetime\"])\n",
-    "print(nData)\n",
-    "nData.resample('1D').plot()\n",
-    "plt.show()"
+    "print(nData.head())\n",
+    "#print(data[data['datetime'].dt.date==data['datetime'][0].date()].mean())\n",
+    "#nData.resample('1D').mean().plot()\n",
+    "resampledData = nData.resample('1D')['value'].agg({'max' : np.max, 'min' : np.min,\n",
+    "                                           'mean' : np.mean}).reset_index()\n",
+    "meltedData = pd.melt(resampledData, id_vars=['datetime'], value_vars=['max', 'mean', 'min'],\n",
+    "                    var_name='var', value_name='value')\n",
+    "print(meltedData.head())\n",
+    "#resampledData.plot()\n",
+    "fig, ax = plt.subplots()\n",
+    "sns.pointplot(data=meltedData, x='datetime', y='value', hue='var', ax=ax)\n",
+    "from matplotlib.ticker import LinearLocator\n",
+    "from matplotlib.ticker import FuncFormatter\n",
+    "import matplotlib.dates as dates\n",
+    "\n",
+    "def myFormatter(x, pos):\n",
+    "    return pd.to_datetime(x)\n",
+    "\n",
+    "#ax.get_yaxis().set_major_locator(LinearLocator(numticks=5))\n",
+    "#ax.xaxis.set_major_locator(dates.AutoDateLocator())\n",
+    "#ax.xaxis.set_major_formatter(dates.DateFormatter('%Y.%m.%d'))\n",
+    "#sns.plt.gca().xaxis.set_major_locator(FuncFormatter(myFormatter))\n",
+    "#sns.plt.gca().xaxis.set_major_formatter(dates.DateFormatter('%Y.%m.%d'))\n",
+    "sns.plt.gca().xaxis.set_major_formatter(FuncFormatter(myFormatter))\n",
+    "# put the labels at 45deg since they tend to be too long\n",
+    "#fig.autofmt_xdate()\n",
+    "#ax.set_xticklabels(xticks, rotation=45)\n",
+    "sns.plt.gcf().autofmt_xdate()\n",
+    "sns.plt.show()"
    ]
   },
   {
@@ -157,7 +174,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -168,7 +185,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
