--- a/sleepTesting.ipynb
+++ b/sleepTesting.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "%matplotlib notebook\n",
     "\n",
     "import os\n",
@@ -33,13 +35,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "importlib.reload(mplot)\n",
-    "importlib.reload(sleepStats)\n",
-    "importlib.reload(utils)"
+    "import logging\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "logger.handlers[0].stream = sys.stdout"
    ]
   },
   {
@@ -57,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "dataFolder = \"fitbit_analyzer\\\\dataDumpSubset\"\n",
+    "dataFolder = \"..\\\\..\\\\scripts_data\\\\fitbit_analyzer\\\\dataDump\"\n",
     "#filepath =  RESOURCE_PATH + \"\\\\unittest\\\\test_sleepStats.csv\""
    ]
   },
@@ -110,8 +113,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -155,11 +157,36 @@
    "source": [
     "exportedDate = today\n",
     "stats = pd.read_csv(\"{}\\\\..\\\\basicAndTimingStats_{}.csv\".format(dataFolder, exportedDate), parse_dates=['date'])\n",
-    "#print(stats.head())\n",
-    "mplot.plotPreliminaryStats(stats)\n",
-    "mplot.plotWeekdayStatsSleep(stats)\n",
-    "mplot.plotDailyStatsSleep(stats)\n",
-    "mplot.plotMonthlyStatsSleep(stats)"
+    "print(stats.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "testData = stats.set_index('date')['restless']\n",
+    "testData.resample('20D').mean().plot()\n",
+    "testData.plot()\n",
+    "sns.plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mplot.plotYearAndMonthStatsSleep(stats)\n",
+    "#mplot.plotPreliminaryStats(stats)\n",
+    "#mplot.plotWeekdayStatsSleep(stats)\n",
+    "#mplot.plotDailyStatsSleep(stats)\n",
+    "#mplot.plotMonthlyStatsSleep(stats)"
    ]
   },
   {
@@ -173,7 +200,21 @@
     "intradayStats = pd.read_csv(\"{}\\\\..\\\\intradayStats_{}.csv\".format(dataFolder, exportedDate))\n",
     "#print(intradayStats.head())\n",
     "intradayStats.drop(\"date\", axis=1, inplace=True)\n",
-    "mplot.plotSleepValueHeatmap(intradayStats, sleepValue=1)"
+    "data = intradayStats.apply(pd.value_counts)\n",
+    "mplot.plotSleepValueHeatmap(data, sleepValue=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "normIntradayCountStats = sleepStats.normalizedIntradayCountStats(intradayStats)\n",
+    "centeredIntradayCountStats = sleepStats.centerIntradayCountStats(normIntradayCountStats)\n",
+    "mplot.plotSleepValueHeatmap(centeredIntradayCountStats, sleepValue=3)"
    ]
   },
   {
