Fixed hour measure. Minor improvements and additions on loading utils

--- a/sleepTesting.ipynb
+++ b/sleepTesting.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "%matplotlib notebook\n",
+    "#%matplotlib notebook\n",
     "\n",
     "import os\n",
     "import sys\n",
@@ -28,7 +28,11 @@
     "from resources import RESOURCE_PATH\n",
     "from stats import sleepStats\n",
     "from util import utils\n",
-    "from util import plotting as mplot"
+    "from util import plotting as mplot\n",
+    "from stats import combinedStats\n",
+    "\n",
+    "dataFolder = \"..\\\\..\\\\scripts_data\\\\fitbit_analyzer\\\\dataDump\"\n",
+    "#filepath =  RESOURCE_PATH + \"\\\\unittest\\\\test_sleepStats.csv\""
    ]
   },
   {
@@ -50,18 +54,6 @@
    "metadata": {},
    "source": [
     "### Load and prepare data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "dataFolder = \"..\\\\..\\\\scripts_data\\\\fitbit_analyzer\\\\dataDump\"\n",
-    "#filepath =  RESOURCE_PATH + \"\\\\unittest\\\\test_sleepStats.csv\""
    ]
   },
   {
@@ -101,9 +93,11 @@
     "basicAndTimingStats = sleepStats.generateStatsFrom(sleepData, sleepStats.STATS_NAME_BASIC_AND_TIMING)\n",
     "end = time.time()\n",
     "print(\"Computed basicAndTimingStats in {:.2f}s\".format(end - start))\n",
+    "start = time.time()\n",
     "intervalsStats = sleepStats.generateStatsFrom(sleepData, sleepStats.STATS_NAME_INTERVALS)\n",
     "end = time.time()\n",
     "print(\"Computed intervalsStats in {:.2f}s\".format(end - start))\n",
+    "start = time.time()\n",
     "intradayStats = sleepStats.generateStatsFrom(sleepData, sleepStats.STATS_NAME_INTRADAY)\n",
     "end = time.time()\n",
     "print(\"Computed intradayStats in {:.2f}s\".format(end - start))"
@@ -155,9 +149,24 @@
    },
    "outputs": [],
    "source": [
-    "exportedDate = today\n",
-    "stats = pd.read_csv(\"{}\\\\..\\\\basicAndTimingStats_{}.csv\".format(dataFolder, exportedDate), parse_dates=['date'])\n",
-    "print(stats.head())"
+    "exportedDate = '2016_11_19'\n",
+    "stats = pd.read_csv(\"{}\\\\..\\\\basicAndTimingStats_{}.csv\".format(dataFolder, exportedDate), \n",
+    "                    parse_dates=['date', 'to_bed_time', 'wake_up_time'])\n",
+    "stats.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "stats['day'] = stats['date'].dt.weekday\n",
+    "stats['month'] = stats['date'].dt.month\n",
+    "stats.groupby([stats['day'], stats['month']])[\"sleep_efficiency\"].mean()"
    ]
   },
   {
@@ -168,23 +177,11 @@
    },
    "outputs": [],
    "source": [
-    "testData = stats.set_index('date')['restless']\n",
-    "testData.resample('20D').mean().plot()\n",
-    "testData.plot()\n",
-    "sns.plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mplot.plotYearAndMonthStatsSleep(stats)\n",
+    "sns.set_context(\"poster\")\n",
+    "#mplot.plotYearAndMonthStatsSleep(stats)\n",
     "#mplot.plotPreliminaryStats(stats)\n",
-    "#mplot.plotWeekdayStatsSleep(stats)\n",
+    "mplot.plotWeekdayStatsSleep(stats)\n",
+    "#mplot.plotWeekdayStatsByMonthSleep(stats)\n",
     "#mplot.plotDailyStatsSleep(stats)\n",
     "#mplot.plotMonthlyStatsSleep(stats)"
    ]
@@ -198,10 +195,9 @@
    "outputs": [],
    "source": [
     "intradayStats = pd.read_csv(\"{}\\\\..\\\\intradayStats_{}.csv\".format(dataFolder, exportedDate))\n",
-    "#print(intradayStats.head())\n",
     "intradayStats.drop(\"date\", axis=1, inplace=True)\n",
     "data = intradayStats.apply(pd.value_counts)\n",
-    "mplot.plotSleepValueHeatmap(data, sleepValue=1)"
+    "#mplot.plotSleepValueHeatmap(data, sleepValue=1)"
    ]
   },
   {
@@ -214,23 +210,50 @@
    "source": [
     "normIntradayCountStats = sleepStats.normalizedIntradayCountStats(intradayStats)\n",
     "centeredIntradayCountStats = sleepStats.centerIntradayCountStats(normIntradayCountStats)\n",
-    "mplot.plotSleepValueHeatmap(centeredIntradayCountStats, sleepValue=3)"
+    "#mplot.plotSleepValueHeatmap(centeredIntradayCountStats, sleepValue=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Daily Stats\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#stats.set_index('date', inplace=True)\n",
+    "stats['sleep_efficiency_rol_mean'] = stats['sleep_efficiency'].rolling(center=False,window=20).mean()\n",
+    "stats['sleep_efficiency'].plot()\n",
+    "stats['sleep_efficiency_rol_mean'].plot()\n",
+    "sns.plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "testData = stats['restless']\n",
+    "testData.resample('20D').mean().plot()\n",
+    "testData.plot()\n",
+    "sns.plt.show()"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -244,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
