Added cleaned dashboard notebook

--- a/heartBeatTesting.ipynb
+++ b/heartBeatTesting.ipynb
@@ -4,27 +4,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2017-10-05T09:30:32.985827",
+     "start_time": "2017-10-05T09:30:31.186724"
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
     "\n",
     "import os\n",
     "import sys\n",
     "sys.path.append(os.path.join(os.getcwd(), \"src\"))\n",
     "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import importlib\n",
-    "import time\n",
-    "\n",
     "from util import utils\n",
     "from util import plotting\n",
-    "from stats import hbStats"
+    "from stats import hbStats\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -42,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "dataFolder = \"../../scripts_data/fitbit_analyzer/dataDumpSubset\""
+    "dataFolder = \"../data/fitbit_data/\""
    ]
   },
   {
@@ -95,21 +96,15 @@
    },
    "outputs": [],
    "source": [
-    "hourStats = hbStats.groupByBasicStats(data['datetime'].dt.hour, data, 'hour')\n",
-    "plotting.plot(hourStats, ['count', 'max', 'min', 'std'], 'hour', 2, 2)\n",
-    "#dayStats = hbStats.groupByBasicStats(data['datetime'].dt.day, data, 'day')\n",
-    "#plotting.plot(dayStats, ['count', 'max', 'min', 'std'], 'day', 2, 2)\n",
-    "monthStats = hbStats.groupByBasicStats(data['datetime'].dt.month, data, 'month')\n",
-    "plotting.plotMonthlyStatsHb(monthStats)\n",
-    "dayOfWeekStats = hbStats.groupByBasicStats(data['datetime'].dt.dayofweek, data, 'weekday')\n",
-    "plotting.plotWeekdayStatsHb(dayOfWeekStats)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Daily Plot"
+    "#hourStats = hbStats.groupByBasicStats(data['datetime'].dt.hour, data, 'hour')\n",
+    "#plotting.plot(hourStats, ['count', 'max', 'min', 'std'], 'hour', 2, 2)\n",
+    "dayStats = hbStats.groupByBasicStats(data['datetime'].dt.day, data, 'day')\n",
+    "plotting.plot(dayStats, ['count', 'max', 'min', 'std'], 'day', 2, 2)\n",
+    "#monthStats = hbStats.groupByBasicStats(data['datetime'].dt.month, data, 'month')\n",
+    "#plotting.plotMonthlyStatsHb(monthStats)\n",
+    "#dayOfWeekStats = hbStats.groupByBasicStats(data['datetime'].dt.dayofweek, data, 'weekday')\n",
+    "#plotting.plotWeekdayStatsHb(dayOfWeekStats)\n",
+    "#plotting.plotDailyStatsHb(data)"
    ]
   },
   {
@@ -120,47 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "nData = data.set_index([\"datetime\"])\n",
-    "print(nData.head())\n",
-    "#print(data[data['datetime'].dt.date==data['datetime'][0].date()].mean())\n",
-    "#nData.resample('1D').mean().plot()\n",
-    "resampledData = nData.resample('1D')['value'].agg({'max' : np.max, 'min' : np.min,\n",
-    "                                           'mean' : np.mean}).reset_index()\n",
-    "meltedData = pd.melt(resampledData, id_vars=['datetime'], value_vars=['max', 'mean', 'min'],\n",
-    "                    var_name='var', value_name='value')\n",
-    "print(meltedData.head())\n",
-    "#resampledData.plot()\n",
-    "fig, ax = plt.subplots()\n",
-    "sns.pointplot(data=meltedData, x='datetime', y='value', hue='var', ax=ax)\n",
-    "from matplotlib.ticker import LinearLocator\n",
-    "from matplotlib.ticker import FuncFormatter\n",
-    "import matplotlib.dates as dates\n",
-    "\n",
-    "def myFormatter(x, pos):\n",
-    "    return pd.to_datetime(x)\n",
-    "\n",
-    "#ax.get_yaxis().set_major_locator(LinearLocator(numticks=5))\n",
-    "#ax.xaxis.set_major_locator(dates.AutoDateLocator())\n",
-    "#ax.xaxis.set_major_formatter(dates.DateFormatter('%Y.%m.%d'))\n",
-    "#sns.plt.gca().xaxis.set_major_locator(FuncFormatter(myFormatter))\n",
-    "#sns.plt.gca().xaxis.set_major_formatter(dates.DateFormatter('%Y.%m.%d'))\n",
-    "sns.plt.gca().xaxis.set_major_formatter(FuncFormatter(myFormatter))\n",
-    "# put the labels at 45deg since they tend to be too long\n",
-    "#fig.autofmt_xdate()\n",
-    "#ax.set_xticklabels(xticks, rotation=45)\n",
-    "sns.plt.gcf().autofmt_xdate()\n",
-    "sns.plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "plotting.plotDailyStatsHb(data)"
+    "dayStats.head()"
    ]
   },
   {
@@ -174,7 +129,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -185,7 +140,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -199,21 +154,20 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:fitbit-analyzer]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-fitbit-analyzer-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -221,6 +175,25 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.1"
+  },
+  "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "104px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
